deploy/app_entity: log handler
